--- a/requirements.txt
+++ b/requirements.txt
@@ -1,176 +1,9 @@
 # This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
+# $ conda create -c conda-forge --prefix /path/to/conda/env --file <this file>
 # platform: linux-64
-_libgcc_mutex=0.1=main
-_openmp_mutex=5.1=1_gnu
-arabic_reshaper=2.1.4=pyhd8ed1ab_0
-asn1crypto=1.5.1=pyhd8ed1ab_0
-astroid=2.11.7=py310h06a4308_0
-attrs=22.1.0=pypi_0
-beautifulsoup4=4.10.0=pypi_0
-blas=1.0=mkl
-bottleneck=1.3.5=py310ha9d4c09_0
-brotli=1.0.9=h5eee18b_7
-brotli-bin=1.0.9=h5eee18b_7
-brotlipy=0.7.0=py310h5764c6d_1004
-bzip2=1.0.8=h7b6447c_0
-ca-certificates=2022.07.19=h06a4308_0
-cairo=1.16.0=h19f5f5c_2
-certifi=2022.6.15=py310h06a4308_0
-cffi=1.15.1=py310h74dc2b5_0
-cfgv=3.3.1=pypi_0
-charset-normalizer=2.1.1=pyhd8ed1ab_0
-click=7.1.2=pypi_0
-colorama=0.4.5=pyhd8ed1ab_0
-configparser=5.3.0=pyhd8ed1ab_0
-crimson=0.5.2=pypi_0
-cryptography=35.0.0=py310h685ca39_2
-cssselect2=0.2.1=pyh9f0ad1d_1
-cycler=0.11.0=pyhd3eb1b0_0
-dbus=1.13.18=hb2f20db_0
-dill=0.3.4=pyhd3eb1b0_0
-distlib=0.3.6=pypi_0
-expat=2.4.4=h295c915_0
-filelock=3.8.0=pypi_0
-fontconfig=2.13.1=h6c09931_0
-fonttools=4.25.0=pyhd3eb1b0_0
-freetype=2.11.0=h70c0345_0
-fribidi=1.0.10=h36c2ea0_0
-future=0.18.2=py310hff52083_5
-giflib=5.2.1=h7b6447c_0
-glib=2.69.1=h4ff587b_1
-graphite2=1.3.14=h295c915_1
-greenlet=1.1.3.post0=pypi_0
-gsiqcetl=1.9=pypi_0
-gst-plugins-base=1.14.0=h8213a91_2
-gstreamer=1.14.0=h28cd5cc_2
-harfbuzz=4.3.0=hd55b92a_0
-html5lib=1.1=pyh9f0ad1d_0
-icu=58.2=he6710b0_3
-identify=2.5.6=pypi_0
-idna=3.4=pyhd8ed1ab_0
-iniconfig=1.1.1=pypi_0
-intel-openmp=2021.4.0=h06a4308_3561
-isort=5.9.3=pyhd3eb1b0_0
-jinja2=3.0.3=pyhd3eb1b0_0
-jpeg=9e=h7f8727e_0
-kiwisolver=1.4.2=py310h295c915_0
-krb5=1.19.2=hac12032_0
-lazy-object-proxy=1.6.0=py310h7f8727e_0
-lcms2=2.12=h3be6417_0
-ld_impl_linux-64=2.38=h1181459_1
-lerc=3.0=h295c915_0
-libbrotlicommon=1.0.9=h5eee18b_7
-libbrotlidec=1.0.9=h5eee18b_7
-libbrotlienc=1.0.9=h5eee18b_7
-libclang=10.0.1=default_hb85057a_2
-libdeflate=1.8=h7f8727e_5
-libedit=3.1.20210910=h7f8727e_0
-libevent=2.1.12=h8f2d780_0
-libffi=3.3=he6710b0_2
-libgcc-ng=11.2.0=h1234567_1
-libgomp=11.2.0=h1234567_1
-libllvm10=10.0.1=hbcb73fb_5
-libpng=1.6.37=hbc83047_0
-libpq=12.9=h16c4e8d_3
-libstdcxx-ng=11.2.0=h1234567_1
-libtiff=4.4.0=hecacb30_0
-libuuid=1.0.3=h7f8727e_2
-libwebp=1.2.2=h55f646e_0
-libwebp-base=1.2.2=h7f8727e_0
-libxcb=1.15=h7f8727e_0
-libxkbcommon=1.0.1=hfa300c1_0
-libxml2=2.9.14=h74e7548_0
-libxslt=1.1.35=h4e12654_0
-lxml=4.9.1=py310h1edc446_0
-lz4-c=1.9.3=h295c915_1
-markupsafe=2.1.1=py310h7f8727e_0
-matplotlib=3.5.2=py310h06a4308_0
-matplotlib-base=3.5.2=py310hf590b9c_0
-mccabe=0.7.0=pyhd3eb1b0_0
-mkl=2021.4.0=h06a4308_640
-mkl-service=2.4.0=py310h7f8727e_0
-mkl_fft=1.3.1=py310hd6ae3a3_0
-mkl_random=1.2.2=py310h00e6091_0
-munkres=1.1.4=py_0
-ncurses=6.3=h5eee18b_3
-nodeenv=1.7.0=pypi_0
-nspr=4.33=h295c915_0
-nss=3.74=h0370c37_0
-numexpr=2.8.3=py310hcea2de6_0
-numpy=1.23.1=py310h1794996_0
-numpy-base=1.23.1=py310hcba007f_0
-openssl=1.1.1q=h7f8727e_0
-oscrypto=1.2.1=pyhd3deb0d_0
-packaging=21.3=pyhd3eb1b0_0
-pandas=1.4.4=py310h6a678d5_0
-pango=1.50.7=h05da053_0
-pcre=8.45=h295c915_0
-pillow=9.2.0=py310hace64e9_1
-pip=22.1.2=py310h06a4308_0
-pixman=0.40.0=h36c2ea0_0
-platformdirs=2.5.2=pypi_0
-pluggy=1.0.0=pypi_0
-ply=3.11=py310h06a4308_0
-pre-commit=2.20.0=pypi_0
-py=1.11.0=pypi_0
-pycparser=2.21=pyhd8ed1ab_0
-pydyf=0.5.0=pyhd8ed1ab_0
-pyhanko=0.14.0=pyhd8ed1ab_0
-pyhanko-certvalidator=0.19.5=pyhd8ed1ab_0
-pylint=2.14.5=py310h06a4308_0
-pymongo=3.12.1=pypi_0
-pyopenssl=22.0.0=pyhd8ed1ab_1
-pyparsing=3.0.9=py310h06a4308_0
-pypdf3=1.0.6=pyhd8ed1ab_0
-pyphen=0.13.1=pyhd8ed1ab_0
-pyqt=5.15.7=py310h6a678d5_1
-pyqt5-sip=12.11.0=pypi_0
-pysocks=1.7.1=pyha2e5f31_6
-pytest=7.1.3=pypi_0
-pytest-runner=6.0.0=pypi_0
-python=3.10.4=h12debd9_0
-python-bidi=0.4.2=py_0
-python-dateutil=2.8.2=pyhd3eb1b0_0
-python-dotenv=0.19.1=pypi_0
-python-tzdata=2022.2=pyhd8ed1ab_0
-python_abi=3.10=2_cp310
-pytz=2022.1=py310h06a4308_0
-pytz-deprecation-shim=0.1.0.post0=py310hff52083_2
-pyyaml=5.4.1=pypi_0
-qrcode=7.3.1=pyhd8ed1ab_0
-qt-main=5.15.2=h327a75a_7
-qt-webengine=5.15.9=hd2b0992_4
-qtwebkit=5.212=h4eab89a_4
-readline=8.1.2=h7f8727e_1
-reportlab=3.5.68=py310h94fcab3_1
-requests=2.28.1=pyhd8ed1ab_1
-setuptools=63.4.1=py310h06a4308_0
-sip=6.6.2=py310h6a678d5_0
-six=1.16.0=pyhd3eb1b0_1
-soupsieve=2.3.2.post1=pypi_0
-sqlalchemy=1.4.42=pypi_0
-sqlite=3.39.2=h5082296_0
-svglib=1.4.1=pyhd8ed1ab_0
-tinycss2=1.1.1=pyhd8ed1ab_0
-tk=8.6.12=h1ccaba5_0
-toml=0.10.2=pyhd3eb1b0_0
-tomli=2.0.1=py310h06a4308_0
-tomlkit=0.11.1=py310h06a4308_0
-tornado=6.2=py310h5eee18b_0
-tqdm=4.64.1=pyhd8ed1ab_0
-typing_extensions=4.3.0=py310h06a4308_0
-tzdata=2022c=h04d1e81_0
-tzlocal=4.2=py310hff52083_1
-uritools=4.0.0=pyhd8ed1ab_0
-urllib3=1.26.11=pyhd8ed1ab_0
-virtualenv=20.16.5=pypi_0
-weasyprint=57.1=pyhd8ed1ab_0
-webencodings=0.5.1=py_1
-wheel=0.37.1=pyhd3eb1b0_0
-wrapt=1.14.1=py310h5eee18b_0
-xhtml2pdf=0.2.8=py310hff52083_0
-xz=5.2.5=h7f8727e_1
-yaml=0.2.5=h7f98852_2
-zlib=1.2.12=h5eee18b_3
-zstd=1.5.2=ha4553b6_0
+# weasyprint is using an older version due to a library dependency installed on OICR isilon
+weasyprint=52.5
+jinja2=3.0.3
+pandas=1.4.4
+numpy=1.23.1
+matplotlib=3.5.2
